--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Jinja2==2.11.3
 MarkupSafe==1.1.1
 Werkzeug==1.0.1
 yt-dlp>=2024.1.1
+gunicorn
 
 # System requirement (install manually if missing)
 # FFmpeg must be installed separately for audio conversion
