--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ MarkupSafe==1.1.1
 Werkzeug==1.0.1
 yt-dlp>=2024.1.1
 gunicorn
+flask-cors
 
 # System requirement (install manually if missing)
 # FFmpeg must be installed separately for audio conversion
