--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-Flask==3.1.2
-flask-cors==6.0.2
-yt-dlp[default,curl-cffi]>=2025.1.1
-gunicorn==23.0.0
-requests==2.32.3
+flask
+flask-cors
+yt-dlp
+supabase
